src/test/ui/rfc-2632-const-trait-impl/tilde-const-invalid-places.stderr
error: `~const` is not allowed here
  --> $DIR/tilde-const-invalid-places.rs:8:19
   |
LL | fn rpit() -> impl ~const T { S }
   |                   ^^^^^^^^
   |
   = note: only allowed on bounds on traits' associated types and functions, const fns, const impls and its associated functions

error: `~const` is not allowed here
  --> $DIR/tilde-const-invalid-places.rs:12:17
   |
LL | fn apit(_: impl ~const T) {}
   |                 ^^^^^^^^
   |
   = note: only allowed on bounds on traits' associated types and functions, const fns, const impls and its associated functions

error: `~const` is not allowed here
  --> $DIR/tilde-const-invalid-places.rs:15:50
   |
LL | fn rpit_assoc_bound() -> impl IntoIterator<Item: ~const T> { Some(S) }
   |                                                  ^^^^^^^^
   |
   = note: only allowed on bounds on traits' associated types and functions, const fns, const impls and its associated functions

error: `~const` is not allowed here
  --> $DIR/tilde-const-invalid-places.rs:19:48
   |
LL | fn apit_assoc_bound(_: impl IntoIterator<Item: ~const T>) {}
   |                                                ^^^^^^^^
   |
   = note: only allowed on bounds on traits' associated types and functions, const fns, const impls and its associated functions

error: `~const` is not allowed here
  --> $DIR/tilde-const-invalid-places.rs:22:15
   |
LL | fn generic<P: ~const T>() {}
   |               ^^^^^^^^
   |
   = note: only allowed on bounds on traits' associated types and functions, const fns, const impls and its associated functions

error: `~const` is not allowed here
  --> $DIR/tilde-const-invalid-places.rs:25:31
   |
LL | fn where_clause<P>() where P: ~const T {}
   |                               ^^^^^^^^
   |
   = note: only allowed on bounds on traits' associated types and functions, const fns, const impls and its associated functions

error: `~const` and `?` are mutually exclusive
  --> $DIR/tilde-const-invalid-places.rs:28:25
   |
LL | struct TildeQuestion<T: ~const ?Sized>(std::marker::PhantomData<T>);
   |                         ^^^^^^^^^^^^^

error[E0277]: the trait bound `S: T` is not satisfied
  --> $DIR/tilde-const-invalid-places.rs:8:14
   |
LL | fn rpit() -> impl ~const T { S }
   |              ^^^^^^^^^^^^^ the trait `T` is not implemented for `S`
   |
note: the trait `T` is implemented for `S`, but that implementation is not `const`
  --> $DIR/tilde-const-invalid-places.rs:8:14
   |
LL | fn rpit() -> impl ~const T { S }
   |              ^^^^^^^^^^^^^
   = help: the trait `T` is implemented for `S`

error[E0277]: the trait bound `S: T` is not satisfied
  --> $DIR/tilde-const-invalid-places.rs:15:26
   |
LL | fn rpit_assoc_bound() -> impl IntoIterator<Item: ~const T> { Some(S) }
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `T` is not implemented for `S`
   |
note: the trait `T` is implemented for `S`, but that implementation is not `const`
  --> $DIR/tilde-const-invalid-places.rs:15:26
   |
LL | fn rpit_assoc_bound() -> impl IntoIterator<Item: ~const T> { Some(S) }
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: the trait `T` is implemented for `S`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0277`.
